<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:src="@drawable/icon1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/Welcome"
        android:textColorHint="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="297dp"
        android:layout_height="66dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:hint="@string/desc"
        android:textColorHint="#ffffff"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <View
        android:id="@+id/loginBtn"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <TextView
        android:id="@+id/login"
        android:layout_width="246.91dp"
        android:layout_height="26dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="25sp" />

    <View
        android:id="@+id/btn2"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/btn"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/register"
        android:layout_width="246.91dp"
        android:layout_height="26dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn2"
        app:lineHeight="25sp" />

</androidx.constraintlayout.widget.ConstraintLayout>