<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="125dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/input_feild"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/email_addre"

        android:textColor="#6C6C6C"
        android:textColorHint="#6C6C6C"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:lineHeight="30sp" />


    <View
        android:id="@+id/rectangle_2"
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/input_feild"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"

        />

    <EditText
        android:id="@+id/passwordForS"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"

        android:textColor="#6C6C6C"
        android:textColorHint="#6C6C6C"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:lineHeight="30sp" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/input_feild"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2"

        />

    <EditText
        android:id="@+id/conf_password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/confpassword"

        android:textColor="#6C6C6C"
        android:textColorHint="#6C6C6C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:lineHeight="25sp" />



    <View
        android:id="@+id/regBtn"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/btn"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="246.91dp"
        android:layout_height="26dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/regBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="25sp" />

    <TextView
        android:id="@+id/or_sign_in_"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="top"
        android:text="@string/or_sign_in_"
        android:textColor="#6C6C6C"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regBtn" />



    <ImageView
        android:id="@+id/google"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/google_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_sign_in_" />

    <ImageView
        android:id="@+id/linkedin"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/lindekin_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_sign_in_" />

    <ImageView
        android:id="@+id/github"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/github_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_sign_in_" />

    <TextView
        android:id="@+id/log"
        android:layout_width="292dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:gravity="top"
        android:text="@string/log"
        android:textColor="#6C6C6C"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkedin" />

</androidx.constraintlayout.widget.ConstraintLayout>